@@ -224,7 +224,7 @@ public class TestReaderProjectionsAdapter
 
     private static Block createProjectedColumnBlock(Block data, Type finalType, RowType blockType, List<Integer> dereferences)
     {
-        if (dereferences.size() == 0) {
+        if (dereferences.isEmpty()) {
             return data;
         }
 
@@ -269,7 +269,7 @@ public class TestReaderProjectionsAdapter
                 builder.appendNull();
             }
             else {
-                int lastDereference = dereferences.get(dereferences.size() - 1);
+                int lastDereference = dereferences.getLast();
 
                 finalType.appendTo(currentData.getRawFieldBlock(lastDereference), currentData.getRawIndex(), builder);
             }
