@@ -60,13 +60,13 @@ import static java.lang.Integer.parseInt;
 public class MockKinesisClient
         extends AmazonKinesisClient
 {
-    private List<InternalStream> streams = new ArrayList<>();
+    private final List<InternalStream> streams = new ArrayList<>();
 
     public static class InternalShard
             extends Shard
     {
-        private List<Record> recs = new ArrayList<>();
-        private int index;
+        private final List<Record> recs = new ArrayList<>();
+        private final int index;
 
         public InternalShard(String streamName, int index)
         {
@@ -420,11 +420,11 @@ public class MockKinesisClient
 
     protected ShardIterator getNextShardIterator(ShardIterator previousIter, List<Record> records)
     {
-        if (records.size() == 0) {
+        if (records.isEmpty()) {
             return previousIter;
         }
 
-        Record rec = records.get(records.size() - 1);
+        Record rec = records.getLast();
         int lastSeq = Integer.valueOf(rec.getSequenceNumber());
         return new ShardIterator(previousIter.streamId, previousIter.shardIndex, lastSeq + 1);
     }
